# nbutils

./: .gitignore  README.md  pyproject.toml  test_file2.md  test_headings.md  test_with_h1.md
src/nbutils/: __init__.py  cli.py  core.py
src/nbutils/operations/: convert.py  headings.py
