[tool.poetry]
name = "nbutils"
version = "0.1.0"
description = "A command-line utility for managing Jupyter notebooks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "nbutils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
nbformat = "^5.9.2"

[tool.poetry.group.dev.dependencies]
# add development dependencies
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# create a command-line entry point
# that will be installed as `nbu`
nbu = "nbutils.cli:cli"
